# 181210107023

./: README.md
examples/blink/main/: blink_example_main.c
examples/esp-nfc/sample_project/: CMakeLists.txt
examples/esp-nfc/sample_project/components/PN532/: CMakeLists.txt
examples/esp-nfc/sample_project/main/: CMakeLists.txt  main.c
examples/iothub_client_sample_mqtt/main/: Kconfig.projbuild  azure_main.c
examples/pn532-esp-idf-master/main/: app.c
examples/softAP/main/: CMakeLists.txt  Kconfig.projbuild  softap_example_main.c
examples/softAP/main/webpage/: index.html
examples/udemy_esp32-master/: Makefile
examples/udemy_esp32-master - Copy/: CMakeLists.txt
examples/udemy_esp32-master - Copy/main/: CMakeLists.txt  http_server.c  iothub_client_sample_mqtt.c  main.c  wifi_app.c
examples/udemy_esp32-master - Copy/main/webpage/: app.js  config.html  index.html
examples/udemy_esp32-master/components/rc522/: rc522.h
examples/udemy_esp32-master/main/: CMakeLists.txt  app_nvs.c  component.mk  http_server.c  iothub_client_sample_mqtt.c  main.c  wifi_app.c
examples/udemy_esp32-master/main/webpage/: index1.html
